crates/aranya-policy-compiler/tests/data/facts/create_too_many_values_invalid_fact_literal.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: fact literal does not match definition: The number of Fact values don't match the definition
  |
1 | fact Device[device_id int]=>{name string}
  | ----------------------------------------- definition has 1 values but the expression has 2 values
...
4 |     create Device[device_id:1]=>{name: "bob", email: "bob@email.com"}
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The number of Fact values don't match the definition
